# weddingpage

./: .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
singlepage/: admin.py  forms.py  models.py  views.py
singlepage/migrations/: 0001_initial.py  0002_wish_delete_item.py  0003_wish_created_at.py  0004_rsvp.py  0005_remove_rsvp_email.py  0006_rsvp_num_guests_alter_rsvp_party.py
singlepage/templates/singlepage/: index.html  index1.html
static/css/: style.css
static/js/: script.js
weddingsite/: asgi.py  settings.py  urls.py  wsgi.py
