[tool.poetry]
name = "weddingsite"
version = "0.1.0"
description = ""
authors = ["namndh <hainam.nguyen.ict@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.0.3"
unicorn = "^2.0.1.post1"
gunicorn = "^21.2.0"
django-heroku = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
